--- a/Pipeline_test/Pipeline_test/Pipeline_test.csproj
+++ b/Pipeline_test/Pipeline_test/Pipeline_test.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="ShipManager.cs" />
+    <Compile Include="ShipModel.cs" />
     <Compile Include="StringConc.cs" />
   </ItemGroup>
   <ItemGroup>
