--- a/Pipeline_test/Pipeline_test/Pipeline_test.csproj
+++ b/Pipeline_test/Pipeline_test/Pipeline_test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Observers\Observer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialize.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="ShipForm.cs" />
     <Compile Include="ShipManager.cs" />
