--- a/Pipeline_test/Pipeline_test/Pipeline_test.csproj
+++ b/Pipeline_test/Pipeline_test/Pipeline_test.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Hazard.cs" />
     <Compile Include="HazardForm.cs" />
     <Compile Include="HazardManager.cs" />
+    <Compile Include="ICollidable.cs" />
     <Compile Include="IExplodable.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="MemoryDebug.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Observers\MessageObserver.cs" />
     <Compile Include="Observers\Observer.cs" />
     <Compile Include="Observers\ObserverActions.cs" />
+    <Compile Include="Observers\ScoreObserver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialize.cs" />
