--- a/Pipeline_test/Pipeline_test/Pipeline_test.csproj
+++ b/Pipeline_test/Pipeline_test/Pipeline_test.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Observers\ScoreObserver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreManager.cs" />
     <Compile Include="Serialize.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="ShipForm.cs" />
